# llama-lab

./: .gitignore  .gitmodules  README.md
auto_llama/: README.md  requirements.txt
auto_llama/auto_llama/: .gitignore  __main__.py  actions.py  agent.py  const.py  data_models.py  tokens.py  utils.py
auto_llama/data/: cnbc_finance.json  reuters_finance.json  wsj_markets.json
convo_agents/: ConvoAgents.ipynb  convo_agents.py  requirements.txt
llama_agent/: README.md
llama_agent/llama_agent/: __main__.py  actions.py  agent.py  const.py  data_models.py  utils.py
llama_agi/: LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  run_llama_agi.py
llama_agi/agi/: ExecutionAgent.py  TaskManager.py  task_prompts.py  utils.py
llama_agi/agi/tools/: NoteTakingTools.py  WebpageSearchTool.py
llama_agi/examples/: auto_runner_example.py  streamlit_runner_example.py
llama_agi/llama_agi/: default_task_prompts.py  utils.py
llama_agi/llama_agi/execution_agent/: SimpleExecutionAgent.py  ToolExecutionAgent.py  __init__.py  base.py
llama_agi/llama_agi/runners/: AutoAGIRunner.py  AutoStreamlitAGIRunner.py  __init__.py  base.py
llama_agi/llama_agi/task_manager/: LlamaTaskManager.py  __init__.py  base.py
llama_agi/llama_agi/tools/: NoteTakingTools.py  WebpageSearchTool.py  __init__.py
